// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`merge prisma 1`] = `
"// *** GENERATED BY next-prisma :: DO NOT EDIT ***
model User {
	id Int @unique
	name String 
	content Int 
	desc String 
}
model Post {
	id String @unique
	name String 
}"
`;

exports[`merge prisma cover 1`] = `
"// *** GENERATED BY next-prisma :: DO NOT EDIT ***
model User {
	id Int @unique
	name Int 
	content String 
	desc String 
}
model Post {
	id String @unique
	name String 
}"
`;
